[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/gear/ui/GUI.png" type="Texture" id=1]
[ext_resource path="res://fonts/monogram.tres" type="DynamicFont" id=2]
[ext_resource path="res://singleton/notification.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "pop"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("background:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 129, 20 ), Vector2( 129, 43 ), Vector2( 129, 43 ), Vector2( 129, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="notification" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="background" type="NinePatchRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 129.0
margin_top = 20.0
margin_right = 318.0
margin_bottom = 36.9999
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
region_rect = Rect2( 145, 65, 46, 14 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="label" type="Label" parent="background"]
margin_left = 2.0
margin_top = 1.0
margin_right = 187.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "text"
align = 1
valign = 1

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/pop = SubResource( 1 )

[connection signal="animation_finished" from="animation_player" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="animation_player" to="." method="_on_animation_player_animation_started"]
